<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="8dp"
    android:paddingEnd="24dp">

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/swNotifyAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alarm_notify_switch" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/swDnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dnd_switch" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/dnd_start_hint"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDndStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/dnd_end_hint"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDndEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</LinearLayout>
